exports[`Storyshots Orbital big central planetoid 1`] = `
<svg
  fill="#303030"
  height="100px"
  stroke="#a78247"
  strokeWidth="0.1vw"
  width="100px">
  <g>
    <circle
      cx={50}
      cy={50}
      r={42} />
  </g>
</svg>
`;

exports[`Storyshots Orbital icon in css (deprecated) animated 1`] = `
<div
  className="hSCAmt">
  <div
    className="fBSAXi" />
  <div
    className="idRdZV" />
  <div
    className="lgfYjZ">
    <div
      className="eCcwNF" />
    <div
      className="ghQcng" />
    <div
      className="hnNTOi" />
    <div
      className="irbcDF" />
    <div
      className="letQFJ" />
    <div
      className="eNNVky" />
    <div
      className="lakAtv" />
    <div
      className="fCHlqD" />
    <div
      className="hhFyZS" />
    <div
      className="fTroxn" />
  </div>
</div>
`;

exports[`Storyshots Orbital icon in css (deprecated) static 1`] = `
<div
  className="hSCAmt">
  <div
    className="eLpPpt" />
  <div
    className="dcqSYU" />
  <div
    className="lgfYjZ">
    <div
      className="eCcwNF" />
    <div
      className="ghQcng" />
    <div
      className="hnNTOi" />
    <div
      className="irbcDF" />
    <div
      className="letQFJ" />
    <div
      className="eNNVky" />
    <div
      className="lakAtv" />
    <div
      className="fCHlqD" />
    <div
      className="hhFyZS" />
    <div
      className="fTroxn" />
  </div>
</div>
`;

exports[`Storyshots Orbital planetoid with moons 1`] = `
<svg
  fill="#303030"
  height="100px"
  stroke="#a78247"
  strokeWidth="0.1vw"
  width="100px">
  <g>
    <circle
      cx={50}
      cy={50}
      r={31} />
    <circle
      cx={10}
      cy={15}
      r={6} />
    <circle
      cx={75}
      cy={85}
      r={4} />
  </g>
</svg>
`;
